Form layout fixes: - Column busting widgets get shrunk down correctly - Prompt-north filler overflow fixed - Items prompt/fieldSpan attributes warn if < 0 - fieldSpan=0 will now not display the field - Debug info
Cellmates enhancements:
- FOXRD-643 Stringified cellmateClass/Style
- cellmateKey="." will now auto-generate a key for you
- promptLayout works
- Improved cellmate key debug

Copied from Perforce
 Change: 88761